css fixes
Some CSS that fixes a misterious small white square that appeared on bottom right corner due to scrollbars

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -4,20 +4,14 @@
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
-
 #content {
-    /*width: 100%;*/
-    width: calc(100% - 250px);
-    padding: 40px;
-    min-height: 100vh;
-    transition: all 0.3s;
     position: absolute;
+    width: calc(100% - 235px);
+    min-height: 100vh;
     top: 0;
     right: 0;
-
     &.active {
-        /*width: 100%;*/
-        width: calc(100% - 250px);
+        width: calc(100% - 235px);
     }
 }
 
@@ -34,12 +28,13 @@
 ----------------------------------------------------- */
 #sidebar {
     width:235px;
-    padding-top:3rem;
+    height:100%;
+    
+    padding-top:1rem;
     position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
-    
+
     color: #fff;
     text-align: center;
     font-family: $principal_font;
@@ -47,11 +42,9 @@
     background-color: $color4;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
     
-    /*left: -250px;*/
     transition: all 0.3s;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    
+    overflow: hidden;
+
     z-index: 999;
 
     &.active {
@@ -110,7 +103,7 @@
     transition: all 0.5s ease-in-out;
 
     &.active {
-        display: block;
+        display: none;
         opacity: 1;
     }
 }
@@ -135,7 +128,6 @@
         padding: 20px 0;
 
         &.active {
-            /*width: calc(100% - 250px);*/
             width: 100%;
         }
     }
