--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,8 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css");
 
+body, html{
+    overflow: hidden;
+}
 /*==========================================
     Custom Class rules for Bootstrap
 ==========================================*/
@@ -11,23 +14,22 @@
 /*==========================================
     Custom Scrollbar
 ==========================================*/
-* {
-    scrollbar-width: thin;
-    scrollbar-color: var(--scroll-fg) var(--scroll-bg);
-}
-
-/* Works on Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-    width: 6px;
-    margin-right: -10px;
-}
-
-*::-webkit-scrollbar-track {
-    background: var(--scroll-bg);   
-}
-
-*::-webkit-scrollbar-thumb {
-    background-color: var(--scroll-fg);
-    border-radius: 20px;
-    border: 3px solid var(--scroll-bg);
-}
+    *{
+        scrollbar-width: thin;
+        scrollbar-color: var(--scroll-fg) var(--scroll-bg);
+    }
+    
+    *::-webkit-scrollbar {
+        width: 0;
+        margin-right: -10px;
+    }
+    
+    *::-webkit-scrollbar-track {
+        background: var(--scroll-bg);   
+    }
+    
+    *::-webkit-scrollbar-thumb {
+        background-color: var(--scroll-fg);
+        border-radius: 20px;
+        border: 3px solid var(--scroll-bg);
+    }
